---
config:
  theme: mc
---
classDiagram
    class TemplateGenerationRunConfig {
        +dataset_path: Path
        +output_path: Path
        +mode: sync|async
        +generation_config: TemplateGenerationConfig
    }
    class TemplateDatasetSchema {
        +job_posting_column: str
        +context_columns: Dict~str, str~
    }
    class TemplateGenerationConfig {
        +templates_per_scenario: int
        +dataset_schema: TemplateDatasetSchema
        +prompt_template: str
        +system_prompt_template: Optional~str~
        +required_placeholders: List~str~
        +inference: InferenceConfig
        +model_config_id: str
        +save_after_each_result: bool
    }
    class TemplateOutputRecord {
        +scenario_id: str
        +request_id: str
        +generation_fingerprint: str
        +model_config_id: str
        +templates: Optional~List~str~~
        +error_type: Optional~str~
        +error_message: Optional~str~
    }
    class TemplateGenerator {
        -inference_orchestrator: InferenceOrchestrator
        -template_store: TemplateStore
        +preview(dataset: DataFrame, config: TemplateGenerationConfig, batch_number: int) InferenceBatchPreview
        +generate(dataset: DataFrame, config: TemplateGenerationConfig) DataFrame
        +generate_async(dataset: DataFrame, config: TemplateGenerationConfig) DataFrame
    }
    class TemplateStore {
        -output_path: Path
        +initialize(dataset: DataFrame, config: TemplateGenerationConfig) DataFrame
        +completed_scenario_ids(output_dataset: DataFrame, dataset: DataFrame, config: TemplateGenerationConfig) Set~str~
        +apply_result(output_dataset: DataFrame, dataset: DataFrame, config: TemplateGenerationConfig, record: TemplateOutputRecord) DataFrame
        +save_result(output_dataset: DataFrame, dataset: DataFrame, config: TemplateGenerationConfig, record: TemplateOutputRecord) DataFrame
        +save(output_dataset: DataFrame) void
    }
    class GenerationIdentity {
        +derive_scenario_ids(dataset: DataFrame) List~str~
        +build_generation_fingerprint(config: TemplateGenerationConfig) str
        +build_template_request_id(scenario_id: str, fingerprint: str) str
    }
    class InferenceConfig {
        <<shared inference>>
        +batch_size: int
    }
    class DictResponseFormat {
        <<shared inference>>
        +fields: template_1..template_N
    }
    class InferenceRequest {
        <<shared inference>>
    }
    class InferenceBatchPreview {
        <<shared inference>>
    }
    class InferenceBatchResult {
        <<shared inference>>
    }
    class InferenceOrchestrator {
        <<shared inference>>
    }
    class DataFrame {
        <<pandas>>
    }
    TemplateGenerationRunConfig --> TemplateGenerationConfig : YAML-backed
    TemplateGenerationConfig --> TemplateDatasetSchema
    TemplateGenerationConfig --> InferenceConfig
    TemplateGenerator --> TemplateGenerationConfig : validates and uses
    TemplateGenerator --> GenerationIdentity : derives stable identity
    TemplateGenerator --> DictResponseFormat : requests N strings
    TemplateGenerator --> InferenceRequest : builds pending requests
    TemplateGenerator --> InferenceBatchPreview : previews
    TemplateGenerator --> InferenceOrchestrator : consumes batches
    InferenceOrchestrator --> InferenceBatchResult : yields sequentially
    TemplateGenerator --> TemplateOutputRecord : parses normalized outcomes
    TemplateGenerator --> TemplateStore : checkpoints each result
    TemplateGenerator --> DataFrame : processes
    TemplateStore --> DataFrame : validates and persists
